--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
         "crypto-random-string": "^3.0.1",
         "css-loader": "^5.0.1",
         "csurf": "^1.9.0",
+        "dotenv": "^8.2.0",
         "eslint": "^7.16.0",
         "eslint-plugin-react": "^7.12.4",
         "express": "^4.14.0",
+        "express-validator": "^6.10.0",
         "jest": "^26.6.3",
         "mini-css-extract-plugin": "^1.3.3",
         "multer": "^1.3.0",
