--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "mini-css-extract-plugin": "^1.3.3",
         "multer": "^1.3.0",
         "nodemon": "^2.0.6",
+        "oauth": "^0.9.15",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-redux": "^7.1.0",
