--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "express": "^4.14.0",
         "express-validator": "^6.10.0",
         "jest": "^26.6.3",
+        "login-with-twitter": "^1.2.4",
         "mini-css-extract-plugin": "^1.3.3",
         "multer": "^1.3.0",
         "nodemon": "^2.0.6",
