Add reset button, tweet button

--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
         "react-test-renderer": "^17.0.1",
+        "react-twitter-widgets": "^1.10.0",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.2",
         "redux-promise": "^0.6.0",
+        "rough-notation": "^0.5.1",
         "socket.io": "^3.0.4",
         "socket.io-client": "^3.0.4",
         "spiced-pg": "^1.0.4",
